# research_assistant

./: .gitignore  .python-version  README.md  compose.yaml  init.sql  pyproject.toml
endpoint_upload_doc/: Dockerfile  app.py  requirements.txt
endpoint_upload_doc/modules/: AssistantWithFilesys.py
endpoint_upload_doc/templates/: index.html  result.html
frontend/: Dockerfile  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
